--- a/nifskope.qrc
+++ b/nifskope.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource prefix="/res">
-   <file>NifSkope.xml</file>
+   <file>nif.xml</file>
    <file>nifskope.png</file>
 </qresource>
 </RCC>
