--- a/nifskope.qrc
+++ b/nifskope.qrc
@@ -1,8 +1,14 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource prefix="/res">
-	<file>nifskope.png</file>
-	<file>spells/skel.dat</file>
-	<file alias="ArrowLeft">resources/arrow_left.png</file>
-	<file alias="ArrowRight">resources/arrow_right.png</file>
-</qresource>
+<!DOCTYPE RCC>
+<RCC version="1.0">
+	<qresource prefix="/res">
+		<file>nifskope.png</file>
+		<file>spells/skel.dat</file>
+	</qresource>
+	<qresource prefix="/img">
+		<file alias="ArrowLeft.png">resources/arrow_left.png</file>
+		<file alias="ArrowRight.png">resources/arrow_right.png</file>
+	</qresource>
+	<qresource prefix="/lang">
+		<file alias="de">lang/NifSkope_de.qm</file>
+	</qresource>
 </RCC>
