--- a/style.qss
+++ b/style.qss
@@ -37,16 +37,9 @@ QTreeView:disabled
     Give the fileselectors a green tint on success and a red one on error
 */
 
-FileSelector > QLineEdit
-{
-    border: 1px solid #333;
-    border-radius: 3px;
-    background-color: #fefefe;
-}
-
 FileSelector[state="0"] > QLineEdit
-{	/* the attribute selector doesn't support enums yet, so we need to use raw numbers */
-    background-color: #fefefe;
+{
+    background-color: auto;
 }
 
 FileSelector[state="1"] > QLineEdit
