--- a/style.qss
+++ b/style.qss
@@ -18,18 +18,18 @@ QToolTip
 
 QTreeView
 {
-    background: azure;
-    alternate-background-color: cornsilk;
-    selection-background-color: royalblue;
-    selection-color: snow;
+    background: white;
+    alternate-background-color: #F1F5FA;
+    selection-background-color: #3D80DF;
+    selection-color: white;
     color: black;
 }
 
 QTreeView:disabled
 {
-    background: gainsboro;
-    alternate-background-color: gainsboro;
-    color: slategray;
+    background: #C0C0C0;
+    alternate-background-color: #C0C0C0;
+    color: #7D7D7D;
 }
 
 
