--- a/nifskope.qrc
+++ b/nifskope.qrc
@@ -7,17 +7,20 @@
 	<qresource prefix="/img">
 		<file alias="ArrowLeft.png">resources/arrow_left.png</file>
 		<file alias="ArrowRight.png">resources/arrow_right.png</file>
-	</qresource>
-	<qresource prefix="/btn">
-		<file alias="play">resources/button_play.png</file>
-		<file alias="loop">resources/button_loop.png</file>
-		<file alias="switch">resources/button_switch.png</file>
-		<file alias="viewTop">resources/button_view_top.png</file>
-		<file alias="viewFront">resources/button_view_front.png</file>
-		<file alias="viewSide">resources/button_view_side.png</file>
-		<file alias="viewWalk">resources/button_view_walk.png</file>
-		<file alias="viewUser">resources/button_view_user.png</file>
-		<file alias="viewFlip">resources/button_view_flip.png</file>
-		<file alias="viewPers">resources/button_view_pers.png</file>
-	</qresource>
+        <file alias="update">resources/img_update.png</file>
+        <file alias="link">resources/img_link.png</file>
+        <file alias="flag">resources/img_flag.png</file>
+    </qresource>
+    <qresource prefix="/btn">
+        <file alias="play">resources/button_play.png</file>
+        <file alias="loop">resources/button_loop.png</file>   
+        <file alias="switch">resources/button_switch.png</file>
+        <file alias="viewTop">resources/button_view_top.png</file>
+        <file alias="viewFront">resources/button_view_front.png</file>
+        <file alias="viewSide">resources/button_view_side.png</file>
+        <file alias="viewWalk">resources/button_view_walk.png</file>
+        <file alias="viewUser">resources/button_view_user.png</file>
+        <file alias="viewFlip">resources/button_view_flip.png</file>
+        <file alias="viewPers">resources/button_view_pers.png</file>
+    </qresource>
 </RCC>
