--- a/nifskope.qrc
+++ b/nifskope.qrc
@@ -10,6 +10,7 @@
         <file alias="update">resources/img_update.png</file>
         <file alias="link">resources/img_link.png</file>
         <file alias="flag">resources/img_flag.png</file>
+		<file alias="havok_logo">resources/havok_logo.png</file>
     </qresource>
     <qresource prefix="/btn">
         <file alias="play">resources/button_play.png</file>
