--- a/src/ui/about_dialog.ui
+++ b/src/ui/about_dialog.ui
@@ -72,7 +72,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../nifskope.qrc">:/res/nifskope.png</pixmap>
+    <pixmap resource="../../res/nifskope.qrc">:/res/nifskope.png</pixmap>
    </property>
   </widget>
   <widget class="QScrollArea" name="scrollArea">
@@ -133,7 +133,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="../nifskope.qrc"/>
+  <include location="../../res/nifskope.qrc"/>
  </resources>
  <connections>
   <connection>
