--- a/src/ui/nifskope.ui
+++ b/src/ui/nifskope.ui
@@ -319,7 +319,13 @@
    <attribute name="dockWidgetArea">
     <number>8</number>
    </attribute>
-   <widget class="QWidget" name="dockWidgetContents_3"/>
+   <widget class="QWidget" name="dockWidgetContents_3">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="ReferenceBrowser" name="refrBrowser"/>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QDockWidget" name="ListDock">
    <property name="allowedAreas">
@@ -818,6 +824,11 @@
    <class>NifTreeView</class>
    <extends>QTreeView</extends>
    <header>widgets/nifview.h</header>
+  </customwidget>
+  <customwidget>
+   <class>ReferenceBrowser</class>
+   <extends>QTextBrowser</extends>
+   <header>widgets/refrbrowser.h</header>
   </customwidget>
  </customwidgets>
  <resources>
