[UI] Massive refactoring
Refactored GLView and NifSkope.  GLView no longer directly handles UI.
Split up the NifSkope class into two files.   Replaced progress dialog
with progress bar in status bar.

Split off Settings into a top level Options menu, but haven't begun
refactoring it.

A few icons are cosmetic at this point, and Animations are currently
disabled until I can better implement them.

--- a/res/nifskope.qrc
+++ b/res/nifskope.qrc
@@ -31,5 +31,6 @@
         <file alias="saveView">icon/save-view.png</file>
         <file alias="loadView">icon/load-view.png</file>
         <file alias="userViewActive">icon/view-active.png</file>
+        <file alias="screenshot">icon/screenshot.png</file>
     </qresource>
 </RCC>
